
  * New upstream release.
    - Refresh patches.
    - debian/patches/patches/14_fix_gdbstubs_FTBFS.patch: Remove.
  * Do not use obsolete --enable-apic, --enable-cpu-level=6, --enable-x86-64,
    --enable-fpu, --enable-mmx, --enable-sse=4, --enable-sse-extension,
    --enable-xsave, --enable-sep, --enable-popcnt and --enable-movbe options.
  * Do not use incomplete --enable-3dnow option.

 -- Guillem Jover <guillem@debian.org>  Fri, 04 Jun 2010 15:48:54 +0200

bochs (2.4.2-1) unstable; urgency=low

  * New upstream release.
    - Refresh patches.
    - debian/patches/patches/14_fix_gdbstubs_FTBFS.patch: New file.
  * Do no use obsolete --enable-vme configure option.
  * Switch to source format “3.0 (quilt)”:
    - Remove quilt from Build-Depends.
    - Remove quilt.make include from debian/rules.
    - Remove patch and unpatch targets from debian/rules.
    - Remove now unneeded quilt references in debian/README.source.
  * Use system libltdl shared library. (Closes: #560884)
  * Switch Build-Depends from libwxgtk2.6-dev to libwxgtk2.8-dev.
    Thanks to Ryan Niebur <ryan@debian.org>. (Closes: #561188)
  * Add ${misc:Depends} to every package Depends field.

 -- Guillem Jover <guillem@debian.org>  Mon, 28 Dec 2009 20:16:50 +0100

bochs (2.4.1-2) unstable; urgency=low

  * Remove unused “libreadline5-dev | libreadline-dev” from Build-Depends.
  * Now using Standards-Version 3.8.3 (no changes needed).
  * Use .so extensions instead of .la in the plugin loader so that we can
    stop shipping .la files.
    - debian/patches/12_use_so_plugins.patch: New file.
  * Rename conf_args to conf_arch_args in debian/rules.
  * Move -e from the shebang to a 'set -e' in debian/launcher.
  * Update config.guess and config.sub before running configure and remove
    them on clean to avoid shipping them on the diff.
  * Build-Depend on autotools-dev to guarantee updated config.* files.

 -- Guillem Jover <guillem@debian.org>  Mon, 14 Sep 2009 16:16:38 +0200
